# mini-project-4

./: README.md  azure-pipelines.yml  calculator.py  pyproject.toml  test_calculator.py
