[tool.poetry]
name = "mini-project-4"
version = "0.1.0"
description = "Mini-Project 4 of Software Engineering Foundations"
authors = ["Emily Flynn <emily.flynn@softwire.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-timeout = "^2.1.0"

[tool.pytest.ini_options]
timeout = 20

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
